# uliftbro

./: .gitignore  Cargo.toml  build.rs  tailwind.config.js
dubs/: Cargo.toml
dubs/src/: lib.rs
src/: main.rs
static/: app.wasm  htmx.js  js-wasm.js  json-enc.js  tailwind.css  uliftbro.wasm
