[package]
name = "uliftbro"
version = "0.1.0"
edition = "2021"

[dependencies]
dubs = { path = "dubs" }
axum = { version = "0.7.0", features = ["macros"] }
enum_router = { git = "https://github.com/swlkr/enum_router.git" }
serde = { version = "1.0", features = ["derive"] }

[workspace]
members = ["dubs"]

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
strip = true
codegen-units = 1
