[package]
name = "uliftbro"
version = "0.1.0"
edition = "2021"

[dependencies]
dubs = { path = "dubs", optional = true }
axum = { version = "0.7.0", features = ["macros"], optional = true }
enum_router = { git = "https://github.com/swlkr/enum_router.git", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
web = { path = "/Users/sean/Developer/swlkr/web.rs/crates/web", optional = true }
nanoid = { version = "0.4.0" }
getrandom = { version = "*", features = ["js"] }
stpl = { path = "../stpl" }
signal = { path = "../signal" }

[workspace]
members = ["dubs"]

[features]
default = []
backend = ["dubs", "axum", "enum_router", "serde"]
frontend = ["web"]

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
strip = true
codegen-units = 1
