[package]
name = "dubs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.0", features = ["macros"] }
axum-extra = { version = "0.9.0", features = ["typed-header"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
rizz = { path = "../../rizz" }
ulid = { version = "1.1.0" }
rust-embed = { version = "8.0.0", features = ["axum"] }
mime_guess = { version = "2.0.4" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.17" }
thiserror = { version = "1.0.50" }
justerror = { version = "1.1.0" }
enum_router = { git = "https://github.com/swlkr/enum_router.git" }
stpl = { path = "/Users/sean/Developer/swlkr/stpl" }
static_stash = { git = "https://github.com/swlkr/static_stash" }
